--- a/MediaPlayerDemo/MediaPlayerDemo.csproj
+++ b/MediaPlayerDemo/MediaPlayerDemo.csproj
@@ -187,6 +187,7 @@
     <Compile Include="Controllers\BasicUsageMediaPlayerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PlayListController.cs" />
+    <Compile Include="Controllers\SelectedPlayListController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -249,6 +250,7 @@
     <Content Include="Views\Shared\EditorTemplates\Url.cshtml" />
     <Content Include="Views\BasicUsageMediaPlayer\Index.cshtml" />
     <Content Include="Views\PlayList\Index.cshtml" />
+    <Content Include="Views\SelectedPlayList\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
